objects/ssot__BusRegAuthTypeDependency__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DependentBusRegAuthTypeId__c</fullName>
        <label>Dependent Business Reg Auth Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Business Reg Auth Type Dependency Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentBusRegAuthTypeId__c</fullName>
        <label>Parent Business Reg Auth Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512783626_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BusRegAuthTypeDependency_DependentBu_rel</label>
        <referenceTo>ssot__BusinessRegulatoryAuthType__dlm</referenceTo>
        <relationshipLabel>BusRegAuthTypeDependency_DependentBu_rel</relationshipLabel>
        <relationshipName>rel_1739512783626_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512784316_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BusRegAuthTypeDependency_ParentBusRe_rel</label>
        <referenceTo>ssot__BusinessRegulatoryAuthType__dlm</referenceTo>
        <relationshipLabel>BusRegAuthTypeDependency_ParentBusRe_rel</relationshipLabel>
        <relationshipName>rel_1739512784316_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>